--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,71 +1,55 @@
 name: CI/CD Pipeline
-
-on:
+'on':
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
-
+      - master
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        node-version: [14.x]
-
+        node-version:
+          - 14.x
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-
-    - name: Install dependencies
-      run: npm ci
-
-    - name: Run tests
-      run: npm test
-
-    - name: Build Docker image
-      run: docker build -t my-project-name .
-
-  deploy:
-    needs: build
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: 'Use Node.js ${{ matrix.node-version }}'
+        uses: actions/setup-node@v3
+        with:
+          node-version: '${{ matrix.node-version }}'
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm test
+  docker:
+    needs: test
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: '${{ secrets.DOCKER_HUB_USERNAME }}'
+          password: '${{ secrets.DOCKER_HUB_TOKEN }}'
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: 'chrishubert/whatsapp-web-api:latest'
 
-    - name: Setup Docker
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y docker-compose
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-
-    - name: Build and push Docker image
-      run: |
-        docker-compose build
-        docker-compose push
-
-    - name: Deploy to server
-      run: |
-        echo 'DEPLOY_KEY=${{ secrets.DEPLOY_KEY }}' >> .env
-        echo 'HOST=${{ secrets.HOST }}' >> .env
-        echo 'USER=${{ secrets.USER }}' >> .env
-        echo 'PORT=${{ secrets.PORT }}' >> .env
-        ssh-keyscan -t rsa ${{ secrets.HOST }} >> ~/.ssh/known_hosts
-        chmod 600 ~/.ssh/known_hosts
-        scp -P ${{ secrets.PORT }} docker-compose.yml ${{ secrets.USER }}@${{ secrets.HOST }}:~/my-project-name/
-        ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} "cd my-project-name && docker-compose up -d"
+    # - name: Deploy to server
+    #   run: |
+    #     echo 'DEPLOY_KEY=${{ secrets.DEPLOY_KEY }}' >> .env
+    #     echo 'HOST=${{ secrets.HOST }}' >> .env
+    #     echo 'USER=${{ secrets.USER }}' >> .env
+    #     echo 'PORT=${{ secrets.PORT }}' >> .env
+    #     ssh-keyscan -t rsa ${{ secrets.HOST }} >> ~/.ssh/known_hosts
+    #     chmod 600 ~/.ssh/known_hosts
+    #     scp -P ${{ secrets.PORT }} docker-compose.yml ${{ secrets.USER }}@${{ secrets.HOST }}:~/my-project-name/
+    #     ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} "cd my-project-name && docker-compose up -d"
