--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "jest"
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "axios": "^1.3.5",
@@ -15,7 +15,6 @@
   },
   "devDependencies": {
     "jest": "^29.5.0",
-    "jest-puppeteer": "^8.0.6",
     "supertest": "^6.3.3"
   },
   "keywords": [
