Add Local Callback Endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 # Application
-PORT=3000
-API_KEY=your_global_api_key_here
-BASE_WEBHOOK_URL=https://your-webhook-url.com/endpoint
+PORT=3000 # OPTIONAL
+API_KEY=your_global_api_key_here # OPTIONAL
+BASE_WEBHOOK_URL=http://localhost:3000/localCallbackExample # MANDATORY
+ENABLE_LOCAL_CALLBACK_EXAMPLE=TRUE # OPTIONAL, NOT RECOMMENDED FOR PRODUCTION
 
 # Session File Storage
-SESSIONS_PATH=./sessions
+SESSIONS_PATH=./sessions # OPTIONAL
