Big Update: - ESLint - Improved foldering - New endpoint: Get Chats - New Endpoint: Get Profile Picture

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -21,6 +21,7 @@ jobs:
         run: npm ci
       - name: Run tests
         run: npm test
+        timeout-minutes: 1
   docker:
     needs: test
     runs-on: ubuntu-latest
