--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   app:
     container_name: whatsapp_web_api
     image: chrishubert/whatsapp-web-api:latest # Pull the image from Docker Hub
-    restart: always
+    # restart: always
     ports:
       - "3000:3000"
     environment:
