--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "whatsapp-web.js": "^1.19.5"
   },
   "devDependencies": {
+    "eslint": "^8.38.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.5.0",
     "supertest": "^6.3.3"
   },
