Improvements: - Max Attachment Size - Rate Limiting

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ PORT=3000 # OPTIONAL
 API_KEY=your_global_api_key_here # OPTIONAL
 BASE_WEBHOOK_URL=http://localhost:3000/localCallbackExample # MANDATORY
 ENABLE_LOCAL_CALLBACK_EXAMPLE=TRUE # OPTIONAL, NOT RECOMMENDED FOR PRODUCTION
+MAX_ATTACHMENT_SIZE=10000000 # IN BYTES
 
 # Session File Storage
 SESSIONS_PATH=./sessions # OPTIONAL
