--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
-# Application
-PORT=3000 # OPTIONAL
-API_KEY=your_global_api_key_here # OPTIONAL
+## Application ##
+PORT=3000 # OPTIONAL, DEFAULT 3000
+API_KEY=your_global_api_key_here # OPTIONAL, DEFAULT EMPTY
 BASE_WEBHOOK_URL=http://localhost:3000/localCallbackExample # MANDATORY
-ENABLE_LOCAL_CALLBACK_EXAMPLE=TRUE # OPTIONAL, NOT RECOMMENDED FOR PRODUCTION
-MAX_ATTACHMENT_SIZE=10000000 # IN BYTES
+ENABLE_LOCAL_CALLBACK_EXAMPLE=TRUE # OPTIONAL, DISABLE FOR PRODUCTION
 
-# Session File Storage
+## Client ##
+MAX_ATTACHMENT_SIZE=10000000 # IF REACHED, THE BODY WILL BU NULL
+SET_MESSAGES_AS_SEEN=TRUE # WILL MARK THE MESSAGES AS READ AUTOMATICALLY
+# ALL CALLBACKS: auth_failure|authenticated|call|change_state|disconnected|group_join|group_leave|group_update|loading_screen|media_uploaded|message|message_ack|message_create|message_reaction|message_revoke_everyone|qr|ready|contact_changed
+DISABLED_CALLBACKS=message_ack|message_reaction  # PREVENT SENDING CERTAIN TYPES OF CALLBACKS BACK TO THE WEBHOOK
+
+## Session File Storage ##
 SESSIONS_PATH=./sessions # OPTIONAL
