--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "jest --runInBand",
-    "swagger-autogen": "node swagger.js"
+    "swagger": "node swagger.js"
   },
   "dependencies": {
     "axios": "^1.3.5",
