--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "qrcode-terminal": "^0.12.0",
+    "swagger-ui-express": "^4.6.3",
     "whatsapp-web.js": "^1.21.0"
   },
   "devDependencies": {
@@ -24,8 +25,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.5.0",
     "supertest": "^6.3.3",
-    "swagger-autogen": "^2.23.1",
-    "swagger-ui-express": "^4.6.2"
+    "swagger-autogen": "^2.23.1"
   },
   "keywords": [
     "whatsapp",
