--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ MAX_ATTACHMENT_SIZE=10000000 # IF REACHED, MEDIA ATTACHMENT BODY WILL BE NULL
 SET_MESSAGES_AS_SEEN=TRUE # WILL MARK THE MESSAGES AS READ AUTOMATICALLY
 # ALL CALLBACKS: auth_failure|authenticated|call|change_state|disconnected|group_join|group_leave|group_update|loading_screen|media_uploaded|message|message_ack|message_create|message_reaction|message_revoke_everyone|qr|ready|contact_changed
 DISABLED_CALLBACKS=message_ack|message_reaction  # PREVENT SENDING CERTAIN TYPES OF CALLBACKS BACK TO THE WEBHOOK
+WEB_VERSION='2.2328.5' # OPTIONAL, THE VERSION OF WHATSAPP WEB TO USE
+WEB_VERSION_CACHE_TYPE='remote' # OPTIONAL, DETERMINTES WHERE TO GET THE WHATSAPP WEB VERSION, DEFAULT 'remote'
 
 ## Session File Storage ##
 SESSIONS_PATH=./sessions # OPTIONAL
