--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ PORT=3000 # OPTIONAL, DEFAULT 3000
 API_KEY=your_global_api_key_here # OPTIONAL, DEFAULT EMPTY
 BASE_WEBHOOK_URL=http://localhost:3000/localCallbackExample # MANDATORY
 ENABLE_LOCAL_CALLBACK_EXAMPLE=TRUE # OPTIONAL, DISABLE FOR PRODUCTION
+RATE_LIMIT_MAX=1000 # OPTIONAL, THE MAXIUM NUMBER OF CONNECTIONS TO ALLOW PER TIME FRAME
+RATE_LIMIT_WINDOW_MS=1000 # OPTIONAL, TIME FRAME FOR WHICH REQUESTS ARE CHECKED IN MS
 
 ## Client ##
 MAX_ATTACHMENT_SIZE=10000000 # IF REACHED, MEDIA ATTACHMENT BODY WILL BE NULL
