--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express-rate-limit": "^6.9.0",
     "qrcode-terminal": "^0.12.0",
     "swagger-ui-express": "^4.6.3",
-    "whatsapp-web.js": "^1.22.2-alpha.0"
+    "whatsapp-web.js": "https://github.com/Julzk/whatsapp-web.js/tarball/jkr_hotfix_8"
   },
   "devDependencies": {
     "eslint": "^8.38.0",
