Add docker tagging

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,7 +4,16 @@ name: CI/CD Pipeline for Push to Master
     branches:
       - master
 jobs:
+  fetch-tag:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Fetch latest tag
+      run: |
+        repo="pedroslopez/whatsapp-web.js"  # replace with the repository you want to fetch from
+        latest_tag=$(curl -s "https://api.github.com/repos/$repo/tags" | jq -r .[0].name)
+        echo "LATEST_TAG=$latest_tag" >> $GITHUB_ENV
   test:
+    needs: fetch-tag
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -35,9 +44,11 @@ jobs:
         with:
           username: '${{ secrets.DOCKER_HUB_USERNAME }}'
           password: '${{ secrets.DOCKER_HUB_TOKEN }}'
-      - name: Build and push
+      - name: Build and push with dynamic tag
         uses: docker/build-push-action@v4
         with:
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
-          tags: 'chrishubert/whatsapp-web-api:latest'
+          tags: |
+            chrishubert/whatsapp-web-api:${{ env.LATEST_TAG }}
+            chrishubert/whatsapp-web-api:latest
