Adding docker tagging

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,7 +12,7 @@ jobs:
         repo="pedroslopez/whatsapp-web.js"
         latest_tag=$(curl -s "https://api.github.com/repos/$repo/tags" | jq -r .[0].name)
         docker_friendly_tag=$(echo "$latest_tag" | tr '.-' '__')
-        echo "tag=$docker_friendly_tag" >> $GITHUB_OUTPUT
+        echo "tag=$docker_friendly_tag" >> "$GITHUB_OUTPUT"
   test:
     needs: fetch-tag
     runs-on: ubuntu-latest
