--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "swagger-ui-express": "^4.6.3",
-    "whatsapp-web.js": "https://github.com/Julzk/whatsapp-web.js/tarball/jkr_hotfix_8"
+    "whatsapp-web.js": "^1.22.2-alpha.1"
   },
   "devDependencies": {
     "eslint": "^8.38.0",
