--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "swagger-ui-express": "^4.6.3",
-    "whatsapp-web.js": "^1.23.0"
+    "whatsapp-web.js": "^1.23.0",
+    "@aws-sdk/client-s3":"3.485.0"
   },
   "devDependencies": {
     "eslint": "^8.38.0",
