--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "qrcode-terminal": "^0.12.0",
     "swagger-ui-express": "^4.6.3",
     "whatsapp-web.js": "^1.23.0",
-    "@aws-sdk/client-s3":"3.485.0"
+    "@aws-sdk/client-s3"
   },
   "devDependencies": {
     "eslint": "^8.38.0",
