--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "jest --runInBand",
     "swagger": "node swagger.js"
   },
@@ -16,7 +17,7 @@
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "swagger-ui-express": "^4.6.3",
-    "whatsapp-web.js": "git+https://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:x-oauth-basic@github.com/matheus-de-araujo/whatsapp-web.js.git#nups"
+    "whatsapp-web.js": "file:./whatsapp-web.js"
   },
   "devDependencies": {
     "eslint": "^8.38.0",
@@ -25,6 +26,7 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.5.0",
+    "nodemon": "^3.0.3",
     "supertest": "^6.3.3",
     "swagger-autogen": "^2.23.1"
   },
