--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "qrcode-terminal": "^0.12.0",
     "swagger-ui-express": "^4.6.3",
     "@aws-sdk/client-s3": "^3.485.0",
-    "mime-types": "^2.1.35"
+    "mime-types": "^2.1.35",
     "whatsapp-web.js": "1.23.1-alpha.4"
 
   },
