--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "REST API wrapper for whatsapp-web.js",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "build": "tsup dist/server.js",
+    "start": "node dist/server.js",
     "test": "jest --runInBand",
     "swagger": "node swagger.js"
   },
@@ -16,6 +17,7 @@
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "swagger-ui-express": "^4.6.3",
+    "tsup": "^8.0.2",
     "whatsapp-web.js": "1.23.1-alpha.4"
   },
   "devDependencies": {
