--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "REST API wrapper for whatsapp-web.js",
   "main": "server.js",
   "scripts": {
+    "vercel-build": "node ./server.js",
     "start": "node server.js",
     "test": "jest --runInBand",
     "swagger": "node swagger.js"
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^6.11.2",
@@ -20,6 +22,7 @@
     "whatsapp-web.js": "pedroslopez/whatsapp-web.js#webpack-exodus"
   },
   "devDependencies": {
+    "@vercel/node": "^3.0.28",
     "eslint": "^8.38.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -41,7 +44,7 @@
   "author": "Christophe Hubert",
   "license": "MIT",
   "engines": {
-    "node": ">=14.17.0"
+    "node": "20.x"
   },
   "repository": {
     "type": "git",
