--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "REST API wrapper for whatsapp-web.js",
   "main": "server.js",
   "scripts": {
-    "vercel-build": "node ./server.js",
     "start": "node server.js",
     "test": "jest --runInBand",
     "swagger": "node swagger.js"
@@ -16,6 +15,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^6.11.2",
     "http": "^0.0.1-security",
+    "puppeteer-core": "^22.7.1",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "swagger-ui-express": "^4.6.3",
