--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "test": "jest --runInBand",
-    "swagger": "node swagger.js"
+    "swagger": "node swagger.js",
+    "vercel-build": "node swagger.js"
   },
   "dependencies": {
     "axios": "^1.6.5",
