--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "jest --runInBand",
-    "swagger": "node swagger.js",
-    "vercel-build": "node swagger.js"
+    "swagger": "node swagger.js"
   },
   "dependencies": {
     "axios": "^1.6.5",
@@ -19,6 +18,7 @@
     "puppeteer-core": "^22.7.1",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
+    "swagger-ui": "^5.17.3",
     "swagger-ui-express": "^4.6.3",
     "whatsapp-web.js": "pedroslopez/whatsapp-web.js#webpack-exodus"
   },
