feat: implement RemoteAuth
add:
- missing events listeners

modify:
- allow the use of LocalAuth and RemoteAuth for creating sessions

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,12 @@ ENABLE_LOCAL_CALLBACK_EXAMPLE=TRUE # OPTIONAL, DISABLE FOR PRODUCTION
 RATE_LIMIT_MAX=1000 # OPTIONAL, THE MAXIUM NUMBER OF CONNECTIONS TO ALLOW PER TIME FRAME
 RATE_LIMIT_WINDOW_MS=1000 # OPTIONAL, TIME FRAME FOR WHICH REQUESTS ARE CHECKED IN MS
 
+## Database ##
+MONGODB_URI=mongodb+srv://user:password@database.link.mongodb.net/
+
+## Remote sessions ##
+REMOTE_SESSIONS=session1,session2,session3
+
 ## Client ##
 MAX_ATTACHMENT_SIZE=10000000 # IF REACHED, MEDIA ATTACHMENT BODY WILL BE NULL
 SET_MESSAGES_AS_SEEN=TRUE # WILL MARK THE MESSAGES AS READ AUTOMATICALLY
