--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^6.11.2",
+    "mongoose": "^8.3.4",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "swagger-ui-express": "^4.6.3",
-    "whatsapp-web.js": "pedroslopez/whatsapp-web.js#webpack-exodus"
+    "whatsapp-web.js": "pedroslopez/whatsapp-web.js#webpack-exodus",
+    "wwebjs-mongo": "^1.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
