--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "swagger": "nodemon swagger.js"
   },
   "dependencies": {
+    "amqplib": "^0.10.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^6.11.2",
