add simple react frontend to manage sessions. create a few new endpoints. use websocket to manage sessions.

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,20 @@
 ## Application ##
-PORT=3000 # OPTIONAL, DEFAULT 3000
+PORT=5000 # OPTIONAL, DEFAULT 5000
 API_KEY=your_global_api_key_here # OPTIONAL, DEFAULT EMPTY
-BASE_WEBHOOK_URL=http://localhost:3000/localCallbackExample # MANDATORY
+BASE_WEBHOOK_URL=http://localhost:5000/localCallbackExample # MANDATORY
 ENABLE_LOCAL_CALLBACK_EXAMPLE=TRUE # OPTIONAL, DISABLE FOR PRODUCTION
-RATE_LIMIT_MAX=1000 # OPTIONAL, THE MAXIUM NUMBER OF CONNECTIONS TO ALLOW PER TIME FRAME
+RATE_LIMIT_MAX=1000 # OPTIONAL, THE MAXIMUM NUMBER OF CONNECTIONS TO ALLOW PER TIME FRAME
 RATE_LIMIT_WINDOW_MS=1000 # OPTIONAL, TIME FRAME FOR WHICH REQUESTS ARE CHECKED IN MS
+
+USE_FRONTEND=TRUE # Use the frontend to help managing sessions (This will overwrite empty USE_WEB_SOCKET_PORT to 8000)
+USE_WEB_SOCKET_PORT=8000 # Specify the websocket port if it is intended to be used
+REACT_APP_BACKEND_URL=http://localhost # The backend url for the clients to connect to
+REACT_APP_USE_WEB_SOCKET_PORT=8000 # Specify how the which port frontend websocket client should be connected to. Should be the same as USE_WEB_SOCKET_PORT or 8000 if not specified
+REACT_APP_BACKEND_RESTAPI_PORT=5000 # Specify how the which port frontend restapi client should be connected to. Should be the same as PORT or 5000 if not specified
 
 ## Client ##
 MAX_ATTACHMENT_SIZE=10000000 # IF REACHED, MEDIA ATTACHMENT BODY WILL BE NULL
-SET_MESSAGES_AS_SEEN=TRUE # WILL MARK THE MESSAGES AS READ AUTOMATICALLY
+SET_MESSAGES_AS_SEEN=FALSE # WILL MARK THE MESSAGES AS READ AUTOMATICALLY
 # ALL CALLBACKS: auth_failure|authenticated|call|change_state|disconnected|group_join|group_leave|group_update|loading_screen|media_uploaded|message|message_ack|message_create|message_reaction|message_revoke_everyone|qr|ready|contact_changed|unread_count|message_edit|message_ciphertext
 DISABLED_CALLBACKS=message_ack|message_reaction|unread_count|message_edit|message_ciphertext  # PREVENT SENDING CERTAIN TYPES OF CALLBACKS BACK TO THE WEBHOOK
 WEB_VERSION='2.2328.5' # OPTIONAL, THE VERSION OF WHATSAPP WEB TO USE
