--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,15 @@ version: '3.8'
 services:
   app:
     container_name: whatsapp_web_api
-    # build: .
-    image: chrishubert/whatsapp-web-api:latest # Pull the image from Docker Hub
+    build: .
     restart: always
     ports:
-      - "3000:3000"
+      - "5000:5000"
+      - "8000:8000"
+    command: node server.js
     environment:
-      # - API_KEY=your_global_api_key_here  # OPTIONAL
-      - BASE_WEBHOOK_URL=http://localhost:3000/localCallbackExample
+      - API_KEY=sample_api_key  # OPTIONAL
+      - BASE_WEBHOOK_URL=http://localhost:5000/localCallbackExample
       - ENABLE_LOCAL_CALLBACK_EXAMPLE=TRUE # OPTIONAL, NOT RECOMMENDED FOR PRODUCTION
       - MAX_ATTACHMENT_SIZE=5000000 # IN BYTES
       - SET_MESSAGES_AS_SEEN=TRUE # WILL MARK THE MESSAGES AS READ AUTOMATICALLY
@@ -22,5 +23,10 @@ services:
       # - WEB_VERSION='2.2328.5' # OPTIONAL, THE VERSION OF WHATSAPP WEB TO USE
       # - WEB_VERSION_CACHE_TYPE=none # OPTIONAL, DETERMINES WHERE TO GET THE WHATSAPP WEB VERSION(local, remote or none), DEFAULT 'none'
       # - RECOVER_SESSIONS=TRUE # OPTIONAL, SHOULD WE RECOVER THE SESSION IN CASE OF PAGE FAILURES
+      - USE_FRONTEND=TRUE # Use the frontend to help managing sessions (This will overwrite empty USE_WEB_SOCKET_PORT to 8000)
+      - USE_WEB_SOCKET_PORT=8000 # Specify the websocket port if it is intended to be used
+      - REACT_APP_BACKEND_URL=http://localhost # The backend url for the clients to connect to
+      - REACT_APP_USE_WEB_SOCKET_PORT=8000 # Specify how the which port frontend websocket client should be connected to. Should be the same as USE_WEB_SOCKET_PORT or 8000 if not specified
+      - REACT_APP_BACKEND_RESTAPI_PORT=5000 # Specify how the which port frontend restapi client should be connected to. Should be the same as PORT or 5000 if not specified
     volumes:
       - ./sessions:/usr/src/app/sessions # Mount the local ./sessions/ folder to the container's /usr/src/app/sessions folder
