clean up a scss format. revise a mistaken deletion. update the docker files.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     container_name: whatsapp_web_api
@@ -8,25 +6,7 @@ services:
     ports:
       - "5000:5000"
       - "8000:8000"
-    command: node server.js
-    environment:
-      - API_KEY=sample_api_key  # OPTIONAL
-      - BASE_WEBHOOK_URL=http://localhost:5000/localCallbackExample
-      - ENABLE_LOCAL_CALLBACK_EXAMPLE=TRUE # OPTIONAL, NOT RECOMMENDED FOR PRODUCTION
-      - MAX_ATTACHMENT_SIZE=5000000 # IN BYTES
-      - SET_MESSAGES_AS_SEEN=TRUE # WILL MARK THE MESSAGES AS READ AUTOMATICALLY
-      # ALL CALLBACKS: auth_failure|authenticated|call|change_state|disconnected|group_join|group_leave|group_update|loading_screen|media_uploaded|message|message_ack|message_create|message_reaction|message_revoke_everyone|qr|ready|contact_changed
-      - DISABLED_CALLBACKS=message_ack|message_reaction  # PREVENT SENDING CERTAIN TYPES OF CALLBACKS BACK TO THE WEBHOOK
-      - ENABLE_SWAGGER_ENDPOINT=TRUE # OPTIONAL, ENABLES THE /api-docs ENDPOINT
-      # - RATE_LIMIT_MAX=1000 # OPTIONAL, THE MAXIUM NUMBER OF CONNECTIONS TO ALLOW PER TIME FRAME
-      # - RATE_LIMIT_WINDOW_MS=1000 # OPTIONAL, TIME FRAME FOR WHICH REQUESTS ARE CHECKED IN MS
-      # - WEB_VERSION='2.2328.5' # OPTIONAL, THE VERSION OF WHATSAPP WEB TO USE
-      # - WEB_VERSION_CACHE_TYPE=none # OPTIONAL, DETERMINES WHERE TO GET THE WHATSAPP WEB VERSION(local, remote or none), DEFAULT 'none'
-      # - RECOVER_SESSIONS=TRUE # OPTIONAL, SHOULD WE RECOVER THE SESSION IN CASE OF PAGE FAILURES
-      - USE_FRONTEND=TRUE # Use the frontend to help managing sessions (This will overwrite empty USE_WEB_SOCKET_PORT to 8000)
-      - USE_WEB_SOCKET_PORT=8000 # Specify the websocket port if it is intended to be used
-      - REACT_APP_BACKEND_URL=http://localhost # The backend url for the clients to connect to
-      - REACT_APP_USE_WEB_SOCKET_PORT=8000 # Specify how the which port frontend websocket client should be connected to. Should be the same as USE_WEB_SOCKET_PORT or 8000 if not specified
-      - REACT_APP_BACKEND_RESTAPI_PORT=5000 # Specify how the which port frontend restapi client should be connected to. Should be the same as PORT or 5000 if not specified
+    env_file:
+      - .env.example
     volumes:
-      - ./sessions:/usr/src/app/sessions # Mount the local ./sessions/ folder to the container's /usr/src/app/sessions folder
+      - ./sessions:/usr/src/app/sessions
