change env variable PORT since it is often reserved by service providers

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 ## Application ##
-PORT=5000 # OPTIONAL, DEFAULT 5000
+API_PORT=5000 # OPTIONAL, DEFAULT 5000
 API_KEY=your_global_api_key_here # OPTIONAL, DEFAULT EMPTY
 BASE_WEBHOOK_URL=http://localhost:5000/localCallbackExample # MANDATORY
 ENABLE_LOCAL_CALLBACK_EXAMPLE=TRUE # OPTIONAL, DISABLE FOR PRODUCTION
