chore: Adding OpenTelemetry monitoring using signoz service

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 ## Application ##
 PORT=3000 # OPTIONAL, DEFAULT 3000
+ENVIRONMENT=development
+SERVICE_NAME=whatsapp-service
+OTEL_EXPORTER_OTLP_ENDPOINT=signoz-otel-collector:4317
 API_KEY=your_global_api_key_here # OPTIONAL, DEFAULT EMPTY
 BASE_WEBHOOK_URL=http://localhost:3000/localCallbackExample # MANDATORY
 ENABLE_LOCAL_CALLBACK_EXAMPLE=TRUE # OPTIONAL, DISABLE FOR PRODUCTION
