--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,13 @@ RATE_LIMIT_WINDOW_MS=1000 # OPTIONAL, TIME FRAME FOR WHICH REQUESTS ARE CHECKED 
 
 USE_FRONTEND=TRUE # Use the frontend to help managing sessions (This will overwrite empty USE_WEB_SOCKET_PORT to 8000)
 USE_WEB_SOCKET_PORT=8000 # Specify the websocket port if it is intended to be used
+# Specify how the which port react websocket client should be connected to.
+REACT_APP_USE_WEB_SOCKET_PORT=8000
+# Specify how the which port react rest api client should be connected to.
+REACT_APP_BACKEND_RESTAPI_PORT=5000
+# The deployed app url
+REACT_APP_BACKEND_URL=http://localhost
+
 
 ## Client ##
 MAX_ATTACHMENT_SIZE=10000000 # IF REACHED, MEDIA ATTACHMENT BODY WILL BE NULL
