--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,7 @@ RECOVER_SESSIONS=TRUE # OPTIONAL, SHOULD WE RECOVER THE SESSION IN CASE OF PAGE 
 SESSIONS_PATH=./sessions # OPTIONAL
 
 ENABLE_SWAGGER_ENDPOINT=TRUE # OPTIONAL
+
+# Swagger UI Authentication
+SWAGGER_USER=your_secure_username
+SWAGGER_PASSWORD=your_secure_password
