--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,31 @@
 version: '3.8'
 
 services:
-  app:
-    container_name: whatsapp_web_api
-    # build: .
-    image: chrishubert/whatsapp-web-api:latest # Pull the image from Docker Hub
-    restart: always
+  whatsapp-api:
+    build: .
+    container_name: whatsapp-web-api
+    restart: unless-stopped
     ports:
-      - "3000:3000"
-    environment:
-      # - API_KEY=your_global_api_key_here  # OPTIONAL
-      - BASE_WEBHOOK_URL=http://localhost:3000/localCallbackExample
-      - ENABLE_LOCAL_CALLBACK_EXAMPLE=TRUE # OPTIONAL, NOT RECOMMENDED FOR PRODUCTION
-      - MAX_ATTACHMENT_SIZE=5000000 # IN BYTES
-      - SET_MESSAGES_AS_SEEN=TRUE # WILL MARK THE MESSAGES AS READ AUTOMATICALLY
-      # ALL CALLBACKS: auth_failure|authenticated|call|change_state|disconnected|group_join|group_leave|group_update|loading_screen|media_uploaded|message|message_ack|message_create|message_reaction|message_revoke_everyone|qr|ready|contact_changed
-      - DISABLED_CALLBACKS=message_ack|message_reaction  # PREVENT SENDING CERTAIN TYPES OF CALLBACKS BACK TO THE WEBHOOK
-      - ENABLE_SWAGGER_ENDPOINT=TRUE # OPTIONAL, ENABLES THE /api-docs ENDPOINT
-      # - RATE_LIMIT_MAX=1000 # OPTIONAL, THE MAXIUM NUMBER OF CONNECTIONS TO ALLOW PER TIME FRAME
-      # - RATE_LIMIT_WINDOW_MS=1000 # OPTIONAL, TIME FRAME FOR WHICH REQUESTS ARE CHECKED IN MS
-      # - WEB_VERSION='2.2328.5' # OPTIONAL, THE VERSION OF WHATSAPP WEB TO USE
-      # - WEB_VERSION_CACHE_TYPE=none # OPTIONAL, DETERMINES WHERE TO GET THE WHATSAPP WEB VERSION(local, remote or none), DEFAULT 'none'
-      # - RECOVER_SESSIONS=TRUE # OPTIONAL, SHOULD WE RECOVER THE SESSION IN CASE OF PAGE FAILURES
+      - "3050:3050"
     volumes:
-      - ./sessions:/usr/src/app/sessions # Mount the local ./sessions/ folder to the container's /usr/src/app/sessions folder
+      - ./sessions:/app/sessions
+      - ./assets:/app/assets
+    environment:
+      - PORT=3000
+      - API_KEY=${API_KEY:-your_api_key_here}
+      - BASE_WEBHOOK_URL=${BASE_WEBHOOK_URL:-http://localhost:3000/webhook}
+      - NODE_ENV=production
+      - SESSIONS_PATH=/app/sessions
+      - MAX_ATTACHMENT_SIZE=10000000
+      - SET_MESSAGES_AS_SEEN=FALSE
+      - RECOVER_SESSIONS=TRUE
+      - ENABLE_SWAGGER_ENDPOINT=TRUE
+      - SWAGGER_USER=${SWAGGER_USER:-admin}
+      - SWAGGER_PASSWORD=${SWAGGER_PASSWORD:-change_this_password}
+    # Configure healthcheck to verify the service is running properly
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:3000/ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s 
