simple mask on frontend input

--- a/.env.example
+++ b/.env.example
@@ -6,16 +6,6 @@ ENABLE_LOCAL_CALLBACK_EXAMPLE=TRUE # OPTIONAL, DISABLE FOR PRODUCTION
 RATE_LIMIT_MAX=1000 # OPTIONAL, THE MAXIMUM NUMBER OF CONNECTIONS TO ALLOW PER TIME FRAME
 RATE_LIMIT_WINDOW_MS=1000 # OPTIONAL, TIME FRAME FOR WHICH REQUESTS ARE CHECKED IN MS
 
-USE_FRONTEND=TRUE # Use the frontend to help managing sessions (This will overwrite empty USE_WEB_SOCKET_PORT to 8000)
-USE_WEB_SOCKET_PORT=8000 # Specify the websocket port if it is intended to be used
-# Specify how the which port react websocket client should be connected to.
-REACT_APP_USE_WEB_SOCKET_PORT=8000
-# Specify how the which port react rest api client should be connected to.
-REACT_APP_BACKEND_RESTAPI_PORT=5000
-# The deployed app url
-REACT_APP_BACKEND_URL=http://localhost
-
-
 ## Client ##
 MAX_ATTACHMENT_SIZE=10000000 # IF REACHED, MEDIA ATTACHMENT BODY WILL BE NULL
 SET_MESSAGES_AS_SEEN=FALSE # WILL MARK THE MESSAGES AS READ AUTOMATICALLY
@@ -29,3 +19,14 @@ RECOVER_SESSIONS=TRUE # OPTIONAL, SHOULD WE RECOVER THE SESSION IN CASE OF PAGE 
 SESSIONS_PATH=./sessions # OPTIONAL
 
 ENABLE_SWAGGER_ENDPOINT=TRUE # OPTIONAL
+
+# Use the frontend to help managing sessions (This will overwrite empty USE_WEB_SOCKET_PORT to 8000)
+USE_FRONTEND=TRUE
+
+## React Frontend App Settings##
+# Specify how the which port react websocket client should be connected to.
+REACT_APP_USE_WEB_SOCKET_PORT=8000
+# Specify how the which port react rest api client should be connected to.
+REACT_APP_BACKEND_RESTAPI_PORT=5000
+# The deployed app url
+REACT_APP_BACKEND_URL=http://localhost
